// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceNavigation: Component should render correctly 1`] = `
<styled.div
  hideOnDesktop={false}
>
  <styled.div
    key="0"
  >
    <styled.div
      active={true}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="sourceBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Source"
        id="shared.components.dataSourceNavigation.source"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="1"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="fieldsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Fields"
        id="shared.components.dataSourceNavigation.preview"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="2"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="stepsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Steps"
        id="shared.components.dataSourceNavigation.steps"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="3"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="resultsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Results"
        id="shared.components.dataSourceNavigation.result"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="4"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="filtersBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Filters"
        id="shared.components.dataSourceNavigation.filters"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="5"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="tagsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Tags"
        id="shared.components.dataSourceNavigation.tag"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="6"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="statesBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="States"
        id="shared.components.dataSourceNavigation.state"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="7"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 30,
            "width": 30,
          }
        }
        id="metaDataBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Metadata"
        id="shared.components.dataSourceNavigation.metadata"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`DataSourceNavigation: Component should render correctly with fake job 1`] = `
<styled.div
  hideOnDesktop={false}
>
  <styled.div
    key="0"
  >
    <styled.div
      active={true}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="sourceBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Source"
        id="shared.components.dataSourceNavigation.source"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="1"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="fieldsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Fields"
        id="shared.components.dataSourceNavigation.preview"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="2"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="stepsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Steps"
        id="shared.components.dataSourceNavigation.steps"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="3"
  >
    <styled.div
      active={false}
      disabled={true}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="resultsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Results"
        id="shared.components.dataSourceNavigation.result"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="4"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="filtersBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Filters"
        id="shared.components.dataSourceNavigation.filters"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="5"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="tagsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Tags"
        id="shared.components.dataSourceNavigation.tag"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="6"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="statesBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="States"
        id="shared.components.dataSourceNavigation.state"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="7"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 30,
            "width": 30,
          }
        }
        id="metaDataBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Metadata"
        id="shared.components.dataSourceNavigation.metadata"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`DataSourceNavigation: Component should render correctly with job 1`] = `
<styled.div
  hideOnDesktop={false}
>
  <styled.div
    key="0"
  >
    <styled.div
      active={true}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="sourceBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Source"
        id="shared.components.dataSourceNavigation.source"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="1"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="fieldsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Fields"
        id="shared.components.dataSourceNavigation.preview"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="2"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="stepsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Steps"
        id="shared.components.dataSourceNavigation.steps"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="3"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="resultsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Results"
        id="shared.components.dataSourceNavigation.result"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="4"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="filtersBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Filters"
        id="shared.components.dataSourceNavigation.filters"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="5"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="tagsBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Tags"
        id="shared.components.dataSourceNavigation.tag"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="6"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 54,
            "width": 54,
          }
        }
        id="statesBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="States"
        id="shared.components.dataSourceNavigation.state"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
  <styled.div
    key="7"
  >
    <styled.div
      active={false}
      disabled={false}
      onClick={[Function]}
    >
      <Component
        customStyles={
          Object {
            "height": 30,
            "width": 30,
          }
        }
        id="metaDataBtn"
      />
    </styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Metadata"
        id="shared.components.dataSourceNavigation.metadata"
        values={Object {}}
      />
    </styled.div>
  </styled.div>
</styled.div>
`;
